Add resource delivery service
